force-app/base/main/default/objects/Case/fields/Automation_Source__c.field-meta.xml
<CustomField>
    <fullName>Automation_Source__c</fullName>
    <label>Automation Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>