force-app/base/main/default/objects/Case/fields/Catalogue_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalogue Item</label>
    <referenceTo>Catalogue_Item__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>