force-app/base/main/default/objects/Case/fields/Manufacturer_Listing__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer Listing</label>
    <referenceTo>Manufacturer_Listing__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>