force-app/base/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Manufacturer</fullName>
                <default>true</default>
                <label>Awaiting Manufacturer</label>
            </value>
            <value>
                <fullName>Awaiting Compliance</fullName>
            </value>
            <value>
                <fullName>Awaiting Pricing Sign-off</fullName>
            </value>
            <value>
                <fullName>Ready to Publish</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>