force-app/base/main/default/objects/Case/fields/Trigger_Depth__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Depth__c</fullName>
    <label>Trigger Depth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>