force-app/base/main/default/objects/Case/recordTypes/Discontinuation.recordType-meta.xml
<RecordType>
    <fullName>Discontinuation</fullName>
    <active>true</active>
    <businessProcess>AIP_Catalogue_Process</businessProcess>
    <description>Raised when a line is withdrawn.</description>
    <label>Discontinuation</label>
</RecordType>