force-app/base/main/default/objects/Case/recordTypes/New_Listing.recordType-meta.xml
<RecordType>
    <fullName>New_Listing</fullName>
    <active>true</active>
    <businessProcess>AIP_Catalogue_Process</businessProcess>
    <description>Raised when a manufacturer offers a new line.</description>
    <label>New Listing</label>
</RecordType>