force-app/base/main/default/objects/Case/recordTypes/Pack_Change.recordType-meta.xml
<RecordType>
    <fullName>Pack_Change</fullName>
    <active>true</active>
    <businessProcess>AIP_Catalogue_Process</businessProcess>
    <description>Raised when pack size or presentation changes.</description>
    <label>Pack Change</label>
</RecordType>