force-app/base/main/default/objects/Case/recordTypes/Price_Change.recordType-meta.xml
<RecordType>
    <fullName>Price_Change</fullName>
    <active>true</active>
    <businessProcess>AIP_Catalogue_Process</businessProcess>
    <description>Raised when a catalogue price moves and downstream listings need re-agreement.</description>
    <label>Price Change</label>
</RecordType>