force-app/base/main/default/objects/Case/recordTypes/Regulatory_Update.recordType-meta.xml
<RecordType>
    <fullName>Regulatory_Update</fullName>
    <active>true</active>
    <businessProcess>AIP_Catalogue_Process</businessProcess>
    <description>Raised when a storage or scheduling classification changes.</description>
    <label>Regulatory Update</label>
</RecordType>